--- a/index.html
+++ b/index.html
@@ -29,10 +29,55 @@
       body {
         background-color: hsl(218, 23%, 16%);
         font-family: "Manrope", sans-serif;
+        line-height: 1.6;
+        color: hsl(193, 38%, 86%);
       }
       .container {
-        max-width: 375px;
+        max-width: 100%;
+        margin: 100px 1rem;
+      }
+
+      main {
+        background-color: hsl(216, 21%, 24%);
+        padding: 1rem;
+        border-radius: 10px;
+        position: relative;
+      }
+      main article {
+        /* display: flex;
+        flex-direction: column;
+        justify-content: center; */
+        text-align: center;
+      }
+      main article p {
+        font-size: 25px;
+        padding-bottom: 1rem;
+      }
+      .advice-title {
+        color: hsl(150, 100%, 66%);
+        text-transform: uppercase;
+        font-size: 12px;
+        letter-spacing: 2px;
+        margin-bottom: 2rem;
+      }
+
+      .advice-btn {
+        position: relative;
+        top: 50px;
+        padding: 1.2rem;
+        /* max-width: 100px; */
         margin: auto;
+        border-radius: 50px;
+        border: none;
+        background-color: hsl(150, 100%, 66%);
+      }
+
+      /* media queries */
+      @media (min-width: 768px) {
+        .container {
+          max-width: 550px;
+          margin: 100px auto;
+        }
       }
     </style>
 
@@ -42,8 +87,32 @@
     <title>Frontend Mentor | Advice generator app</title>
   </head>
   <body>
-    <main>
-      <div class="container"></div>
+    <main class="container">
+      <article class="advice-wrap">
+        <div class="advice-title">Advice #<span></span></div>
+        <p class="advice-text"></p>
+
+        <div class="line">
+          <svg width="295" height="16" xmlns="http://www.w3.org/2000/svg">
+            <g fill="none" fill-rule="evenodd">
+              <path fill="#4F5D74" d="M0 8h122v1H0zM173 8h122v1H173z" />
+              <g transform="translate(138)" fill="#CEE3E9">
+                <rect width="6" height="16" rx="3" />
+                <rect x="14" width="6" height="16" rx="3" />
+              </g>
+            </g>
+          </svg>
+        </div>
+
+        <button class="advice-btn">
+          <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M20 0H4a4.005 4.005 0 0 0-4 4v16a4.005 4.005 0 0 0 4 4h16a4.005 4.005 0 0 0 4-4V4a4.005 4.005 0 0 0-4-4ZM7.5 18a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z"
+              fill="#202733"
+            />
+          </svg>
+        </button>
+      </article>
     </main>
   </body>
 </html>
