--- a/index.html
+++ b/index.html
@@ -170,5 +170,23 @@
         </button>
       </article>
     </main>
+    <footer class="container">
+      <style>
+        footer {
+          text-align: center;
+        }
+        footer small {
+          display: inline-block;
+          margin-top: 2rem;
+        }
+        footer small a {
+          color: #ccc;
+        }
+      </style>
+      <small
+        >Built by
+        <a href="https://github.com/Kwame007" target="_blank">@kwame007</a> ❤️
+      </small>
+    </footer>
   </body>
 </html>
